adds CompletableFutures
handle async transcription tasks with completablefutures
updates readme