@@ -12,6 +12,9 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -31,7 +34,7 @@ public class TranscriptUtil {
         return allMatches;
     }
     public static void convertTranscriptToFile(List<String> transcript, String name) throws IOException {
-        Path filePath = Paths.get("src/test/resources/"+name+".txt");
+        Path filePath = Path.of("src/test/resources/"+name+".txt");
         Files.deleteIfExists(filePath);
         Files.createFile(filePath);
         for (String str : transcript) {
@@ -40,13 +43,13 @@ public class TranscriptUtil {
         }
     }
     public static void convertTranscriptToFileWithTimestamps(Response response) throws IOException {
-        Path filePath = Paths.get("src/test/resources/transcriptAndTimestamps.txt");
+        Path filePath = Path.of("src/test/resources/transcriptAndTimestamps.txt");
         Files.deleteIfExists(filePath);
         Files.createFile(filePath);
         Files.writeString(filePath, response.asString(), StandardOpenOption.APPEND);
     }
-    public static void convertTranscriptToFileFromLink(String link, String fileName) throws IOException {
-        Path filePath = Paths.get("src/test/resources/"+fileName+".txt");
+    public static Void convertTranscriptToFileFromLink(String link, String fileName) throws IOException {
+        Path filePath = Path.of("src/test/resources/"+fileName+".txt");
         Transcript transcript = AssemblyAITranscriber.transcribeAudio(link);
         String transcriptString = String.valueOf(transcript.getText());
         Files.deleteIfExists(filePath);
@@ -54,17 +57,38 @@ public class TranscriptUtil {
         Files.writeString(filePath, transcriptString, StandardOpenOption.APPEND);
         Reporter.log("Successfully transcribed link: " + link, true);
         Reporter.log("All links for the current test will be transcribed to "+fileName+".txt", true);
+        return null;
     }
 
     /*
     use this helper method to construct a list of audio file links from audioLinks.txt file. the links in that list can be transcribed
      */
     public static List<String> readFileToList(String fileName) throws IOException {
-        Path filePath = Paths.get("src/test/resources/"+fileName+".txt");
+        Path filePath = Path.of("src/test/resources/"+fileName+".txt");
         List<String> result;
         try (Stream<String> lines = Files.lines(filePath)) {
             result = lines.toList();
         }
         return result;
+    }
+
+    public static CompletableFuture<List<String>> audioLinks = CompletableFuture.supplyAsync(() -> {
+            try {
+                return readFileToList("audioLinks");
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        });
+
+    public static CompletableFuture<Void> asyncTranscribeLinks() throws ExecutionException, InterruptedException {
+        CompletableFuture<Void> futureTranscript = new CompletableFuture<>();
+            try {
+                for (String s : audioLinks.get())
+                    futureTranscript.complete(convertTranscriptToFileFromLink(s, "asyncTranscribeFromLinks"));
+            } catch (IOException | ExecutionException | InterruptedException e) {
+                futureTranscript.completeExceptionally(e);
+            }
+        System.out.println(futureTranscript.get());
+        return futureTranscript;
     }
 }
